refactor:重构子项目

--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,12 @@
     <groupId>com.ittqy</groupId>
     <artifactId>spring-boot-course</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>spring-boot-course</name>
     <description>spring-boot-course</description>
+    <modules>
+        <module>spring-boot-quickstarter</module>
+    </modules>
     <properties>
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
