--- a/spring-boot-quickstarter/src/main/resources/application.yml
+++ b/spring-boot-quickstarter/src/main/resources/application.yml
@@ -1,2 +1,13 @@
 server:
   port: 8080
+
+
+my:
+  mood:
+    today: 周五
+    content: 期待周末
+    author: "小程序员"
+  #  功能开关
+  feature:
+    helloSwitch: false
+    closeMsg: "该接口正在维护，10分钟后再来吧！"
