--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <description>spring-boot-course</description>
     <modules>
         <module>spring-boot-quickstarter</module>
+        <module>spring-boot-config</module>
     </modules>
     <properties>
         <java.version>17</java.version>
