--- a/spring-boot-config/pom.xml
+++ b/spring-boot-config/pom.xml
@@ -10,11 +10,17 @@
     </parent>
 
     <artifactId>spring-boot-config</artifactId>
-<!--  加校验框架依赖  -->
+    <!--  加校验框架依赖  -->
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <!--     阿里云OSS云存储   -->
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.18.3</version>
         </dependency>
     </dependencies>
 </project>
