--- a/spring-boot-config/pom.xml
+++ b/spring-boot-config/pom.xml
@@ -22,5 +22,22 @@
             <artifactId>aliyun-sdk-oss</artifactId>
             <version>3.18.3</version>
         </dependency>
+<!--      加入hutool包 -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.40</version>
+        </dependency>
+<!--      二维码  -->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.5.3</version>
+        </dependency>
+<!--     添加邮件发送   -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 </project>
