--- a/spring-boot-config/src/main/resources/application.yml
+++ b/spring-boot-config/src/main/resources/application.yml
@@ -14,3 +14,12 @@ spring:
     multipart:
       max-request-size: 10MB
       max-file-size: 10MB
+  mail:
+    host: smtp.qq.com
+    username: 2725804977@qq.com
+    password: azrlpjqppvnldfce
+    properties.mail.smtp.ssl.enable: true
+
+custom:
+  coder:
+    content: "https://www.baidu.com"
