feat:新增Hutool实用功能的五个接口

--- a/spring-boot-config/pom.xml
+++ b/spring-boot-config/pom.xml
@@ -39,5 +39,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
+<!--    中文词分装    -->
+        <dependency>
+            <groupId>org.ansj</groupId>
+            <artifactId>ansj_seg</artifactId>
+            <version>5.1.1</version>
+        </dependency>
     </dependencies>
 </project>
