--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>spring-boot-redis</module>
         <module>spring-boot-filter-interceptor</module>
         <module>spring-boot-schedule</module>
+        <module>spring-boot-websocket</module>
     </modules>
 
     <properties>
